--- a/tsconfig.json
+++ b/tsconfig.json
@@ -33,8 +33,7 @@
       "react-native-sinbad-ui": ["node_modules/@sinbad/react-native-sinbad-ui"]
     },
     "allowSyntheticDefaultImports": true,
-    "esModuleInterop": true,
-    "resolveJsonModule": true
+    "esModuleInterop": true
   },
   "exclude": ["node_modules", "metro.config.js", "jest.config.js"]
 }
