--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "react-native-fs": "2.18.0",
     "react-native-geolocation-service": "5.3.0-beta.3",
     "react-native-gesture-handler": "1.10.3",
+    "react-native-google-places-autocomplete": "2.4.1",
     "react-native-htmlview": "0.16.0",
     "react-native-install-referrer": "1.0.1",
     "react-native-linear-gradient": "2.5.6",
