--- a/package.json
+++ b/package.json
@@ -45,7 +45,7 @@
     "react-native-fs": "2.18.0",
     "react-native-geolocation-service": "5.3.0-beta.3",
     "react-native-gesture-handler": "1.10.3",
-    "react-native-html-to-pdf": "^0.12.0",
+    "react-native-html-to-pdf": "0.12.0",
     "react-native-htmlview": "0.16.0",
     "react-native-install-referrer": "1.0.1",
     "react-native-linear-gradient": "2.5.6",
@@ -70,7 +70,7 @@
     "redux-logger": "3.0.6",
     "redux-persist": "6.0.0",
     "redux-saga": "1.1.3",
-    "rn-fetch-blob": "^0.12.0"
+    "rn-fetch-blob": "0.12.0"
   },
   "devDependencies": {
     "@babel/core": "7.14.0",
