--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "build": "cd ./android && ./gradlew clean && ./gradlew cleanBuildCache && ./gradlew app:bundleRelease"
   },
   "dependencies": {
+    "@gorhom/bottom-sheet": "4.4.3",
     "@ptomasroos/react-native-multi-slider": "2.2.2",
     "@react-native-clipboard/clipboard": "1.9.0",
     "@react-native-community/async-storage": "1.12.1",
