--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "build": "cd ./android && ./gradlew clean && ./gradlew cleanBuildCache && ./gradlew app:bundleRelease"
   },
   "dependencies": {
+    "@gorhom/bottom-sheet": "4.4.3",
     "@ptomasroos/react-native-multi-slider": "2.2.2",
     "@react-native-clipboard/clipboard": "1.9.0",
     "@react-native-community/async-storage": "1.12.1",
@@ -27,8 +28,8 @@
     "@react-navigation/stack": "5.14.4",
     "@sentry/react-native": "3.2.10",
     "@sinbad/image-editor": "2.3.1",
-    "@types/react-native-html-to-pdf": "0.8.1",
     "@sinbad/react-native-sinbad-ui": "1.0.94",
+    "@types/react-native-html-to-pdf": "0.8.1",
     "fbjs": "0.8.18",
     "moment": "2.29.1",
     "react": "16.13.1",
