--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <manifest 
   xmlns:android="http://schemas.android.com/apk/res/android"
   xmlns:tools="http://schemas.android.com/tools"
-  package="sinbad.app.development">
+  package="sinbad.app.sandbox">
     <!-- USER PERMISSION -->
     <!-- alert -->
     <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW"/>
@@ -25,8 +25,8 @@
     <application
       android:name=".MainApplication"
       android:label="@string/app_name"
-      android:icon="@mipmap/ic_dev"
-      android:roundIcon="@mipmap/ic_dev_round"
+      android:icon="@mipmap/ic_sandbox"
+      android:roundIcon="@mipmap/ic_sandbox_round"
       android:allowBackup="false"
       android:theme="@style/AppTheme"
       android:usesCleartextTraffic="true"
